[package]
name = "cyw43"
version = "0.1.0"
edition = "2021"

[features]
defmt = ["dep:defmt"]
log = ["dep:log"]
fix_fw = []

[dependencies]
embassy-time = { version = "0.1.0" }
embassy-sync = { version = "0.1.0" }
embassy-futures = { version = "0.1.0" }
embassy-net = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", rev = "2528f451387e6c7b27c3140cd87d47521d1971a2" }

atomic-polyfill = "0.1.5"

defmt = { version = "0.3", optional = true }
log = { version = "0.4.17", optional = true }

embedded-hal-1 = { package = "embedded-hal", version = "1.0.0-alpha.9" }
num_enum = { version = "0.5.7", default-features = false }

[dev-dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
